--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "ejs": "^3.1.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongodb": "^4.6.0"
   },
   "devDependencies": {
     "got": "^11.3.0",
